--- a/index.ipynb
+++ b/index.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,11 +38,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Your code here; create the connection and cursor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = sqlite3.Connection('data.sqlite')\n",
+    "c = conn.cursor()"
    ]
   },
   {
@@ -54,11 +74,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Your code here; use a subquery. No join will be necessary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AVG(nOrders)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>27.486239</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   AVG(nOrders)\n",
+       "0     27.486239"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_sql_query('''SELECT AVG(nOrders)\n",
+    "                            FROM (SELECT productCode,\n",
+    "                                 COUNT(orderNumber) as nOrders\n",
+    "                                 FROM orderdetails \n",
+    "                                 GROUP BY 1);''', conn)\n",
+    "df.head(10)\n"
    ]
   },
   {
@@ -80,11 +157,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Your code here; use a subquery. No join will be necessary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customerNumber</th>\n",
+       "      <th>contactLastName</th>\n",
+       "      <th>contactFirstName</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>141</td>\n",
+       "      <td>Freyre</td>\n",
+       "      <td>Diego</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  customerNumber contactLastName contactFirstName\n",
+       "0            141          Freyre           Diego "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_sql_query('''SELECT customerNumber, contactLastName, contactFirstName\n",
+    "                            FROM customers \n",
+    "                            WHERE customerNumber in (SELECT customerNumber \n",
+    "                                                        FROM orders \n",
+    "                                                        WHERE orderDate = '2003-01-31');''', conn)\n",
+    "df.head()\n",
+    "  "
    ]
   },
   {
@@ -98,11 +237,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Your code here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>productName</th>\n",
+       "      <th>count(orderNumber)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1952 Citroen-15CV</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1957 Ford Thunderbird</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1911 Ford Town Car</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1917 Grand Touring Sedan</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1932 Alfa Romeo 8C2300 Spider Sport</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           productName  count(orderNumber)\n",
+       "0                    1952 Citroen-15CV                  24\n",
+       "1                1957 Ford Thunderbird                  24\n",
+       "2                   1911 Ford Town Car                  25\n",
+       "3             1917 Grand Touring Sedan                  25\n",
+       "4  1932 Alfa Romeo 8C2300 Spider Sport                  25"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_sql_query('''SELECT productName, count(orderNumber)\n",
+    "                            FROM products\n",
+    "                            JOIN orderdetails USING (productCode)\n",
+    "                            GROUP BY 1\n",
+    "                            ORDER by count(orderNumber);''', conn)\n",
+    "df.head()"
    ]
   },
   {
@@ -116,11 +338,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>productName</th>\n",
+       "      <th>numPurchasers</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1992 Ferrari 360 Spider red</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1934 Ford V8 Coupe</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1952 Alpine Renault 1300</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1972 Alfa Romeo GTA</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Boeing X-32A JSF</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   productName  numPurchasers\n",
+       "0  1992 Ferrari 360 Spider red             40\n",
+       "1           1934 Ford V8 Coupe             27\n",
+       "2     1952 Alpine Renault 1300             27\n",
+       "3          1972 Alfa Romeo GTA             27\n",
+       "4             Boeing X-32A JSF             27"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "df = pd.read_sql_query(\"\"\"select productName,\n",
+    "                    count(distinct customerNumber) numPurchasers\n",
+    "                    from products\n",
+    "                    join orderdetails\n",
+    "                    using(productCode)\n",
+    "                    join orders\n",
+    "                    using (orderNumber)\n",
+    "                    group by 1\n",
+    "                    order by numPurchasers desc;\"\"\", conn)\n",
+    "df.head()"
    ]
   },
   {
@@ -134,11 +435,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>employeeNumber</th>\n",
+       "      <th>officeCode</th>\n",
+       "      <th>city</th>\n",
+       "      <th>firstName</th>\n",
+       "      <th>lastName</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1370</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td>Gerard</td>\n",
+       "      <td>Hernandez</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1401</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td>Pamela</td>\n",
+       "      <td>Castillo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1621</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Tokyo</td>\n",
+       "      <td>Mami</td>\n",
+       "      <td>Nishi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1501</td>\n",
+       "      <td>7</td>\n",
+       "      <td>London</td>\n",
+       "      <td>Larry</td>\n",
+       "      <td>Bott</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1337</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td>Loui</td>\n",
+       "      <td>Bondur</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  employeeNumber officeCode    city firstName   lastName\n",
+       "0           1370          4   Paris    Gerard  Hernandez\n",
+       "1           1401          4   Paris    Pamela   Castillo\n",
+       "2           1621          5   Tokyo      Mami      Nishi\n",
+       "3           1501          7  London     Larry       Bott\n",
+       "4           1337          4   Paris      Loui     Bondur"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "df = pd.read_sql_query(\"\"\"select distinct employeeNumber,\n",
+    "                    officeCode,\n",
+    "                    o.city,\n",
+    "                    firstName,\n",
+    "                    lastName\n",
+    "                    from employees e\n",
+    "                    join offices o\n",
+    "                    using(officeCode)\n",
+    "                    join customers c\n",
+    "                    on e.employeeNumber = c.salesRepEmployeeNumber\n",
+    "                    join orders\n",
+    "                    using (customerNumber)\n",
+    "                    join orderdetails\n",
+    "                    using (orderNumber)\n",
+    "                    where productCode in (select productCode\n",
+    "                                                 from products\n",
+    "                                                 join orderdetails\n",
+    "                                                 using (productCode)\n",
+    "                                                 join orders\n",
+    "                                                 using (orderNumber)\n",
+    "                                                 group by 1\n",
+    "                                                 having count(distinct customerNumber) <= 20\n",
+    "                                         );\"\"\", conn)\n",
+    "df.head()"
    ]
   },
   {
@@ -150,11 +562,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>employeeNumber</th>\n",
+       "      <th>firstName</th>\n",
+       "      <th>lastName</th>\n",
+       "      <th>count(distinct customerNumber)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1165</td>\n",
+       "      <td>Leslie</td>\n",
+       "      <td>Jennings</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1166</td>\n",
+       "      <td>Leslie</td>\n",
+       "      <td>Thompson</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1188</td>\n",
+       "      <td>Julie</td>\n",
+       "      <td>Firrelli</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1216</td>\n",
+       "      <td>Steve</td>\n",
+       "      <td>Patterson</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1286</td>\n",
+       "      <td>Foon Yue</td>\n",
+       "      <td>Tseng</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  employeeNumber firstName   lastName  count(distinct customerNumber)\n",
+       "0           1165    Leslie   Jennings                               6\n",
+       "1           1166    Leslie   Thompson                               6\n",
+       "2           1188     Julie   Firrelli                               6\n",
+       "3           1216     Steve  Patterson                               6\n",
+       "4           1286  Foon Yue      Tseng                               7"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "df = pd.read_sql_query(\"\"\"select employeeNumber,\n",
+    "                            firstName,\n",
+    "                            lastName,\n",
+    "                            count(distinct customerNumber)\n",
+    "                            from employees e\n",
+    "                            join customers c\n",
+    "                            on e.employeeNumber = c.salesRepEmployeeNumber\n",
+    "                            group by 1,2,3\n",
+    "                            having AVG(creditLimit) > 15000;\"\"\", conn)\n",
+    "df.head()"
    ]
   },
   {
@@ -183,7 +686,49 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
